--- a/man/README.Rmd
+++ b/man/README.Rmd
@@ -19,7 +19,11 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-The goal of smouseGPS is to ...
+The goal of smouseGPS is to smooth and interpolate noisy GPS data. It enables to
+deal with outliers by indentifying them thanks to a collection of b-splines. 
+This package is inspired by the work of Jeffrey J. Early and Adam M. Sykulski
+(https://jeffreyearly.com/smoothing-and-interpolating-noisy-gps-data/).
+It is a translation from Matlab language to R language. 
 
 ## Installation
 
