Add more functions to bspline class.

--- a/man/README.Rmd
+++ b/man/README.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 The goal of smouseGPS is to smooth and interpolate noisy GPS data. It enables to
 deal with outliers by indentifying them thanks to a collection of b-splines. 
-This package is inspired by the work of Jeffrey J. Early and Adam M. Sykulski
+This package is based on the work of Jeffrey J. Early and Adam M. Sykulski
 (https://jeffreyearly.com/smoothing-and-interpolating-noisy-gps-data/).
 It is a translation from Matlab language to R language. 
 
