--- a/man/README.Rmd
+++ b/man/README.Rmd
@@ -35,11 +35,75 @@ You can install the development version of smouseGPS like so:
 remotes::install_github("alexmerot/smouseGPS")
 ```
 
-## Example
+## Introduction
 
-This is a basic example which shows you how to solve a common problem:
+### B-splines
 
-```{r example}
-library(smouseGPS)
-## basic example code
+The class \code{bspline} is the basis of the other classes. 
+
+```{r bspline}
+library("smouseGPS")
+library("ggplot2")
+library("patchwork")
+
+K <- 3 #  order of spline
+t <- Conj(t(matrix(0:10, nrow = 1))) # observation points
+
+list_bsplines <- vector("list", length = 10)
+i <- 1
+
+
+while (i <= length(list_bsplines)) {
+  # browser()
+  # K <- 3 # order of spline
+  D <- K-1 # number of derivates to return
+  
+  # increase the multiplicity of the end knots for higher order splines
+  t_knot <- rbind(
+    array(t[1], dim = c(K-1, 1)),
+    t,
+    array(t[length(t)], dim = c(K-1, 1))
+  )
+  
+  n_splines <- nrow(t) + K-2
+  
+  # coefficients for the bsplines---set all of them to zero for now.
+  m <- array(0, dim = c(n_splines,1))
+  
+  # initialize the BSpline class
+  list_bsplines[[i]] <- bspline$new(K = K, t_knot = t_knot, m = m)
+  
+  m[i] <- 1
+  
+  # You can directly change m
+  list_bsplines[[i]]$set_m(m)
+  
+  i <- i + 1
+  K <- K + 1
+}
+
+names(list_bsplines) <- paste0("K", 3:(K-1))
+
+tq <- Conj(t(matrix(seq(min(t), max(t), length.out = 1000), nrow = 1)))
+
+splines_values <- purrr::map2(
+  list_bsplines,
+  names(list_bsplines),
+  ~ data.frame(order = .y, tq, value = .x[tq], derivative = .x[tq, 1])
+) |> 
+  dplyr::bind_rows()
+
+# Plot the splines
+gg_splines <- ggplot(splines_values, aes(y = value, x = tq)) +
+  geom_line(aes(colour = order), show.legend = FALSE) +
+  labs(title = "b-splines") +
+  theme_classic() 
+
+# Plot the first derivatives
+gg_derivatives <- ggplot(splines_values, aes(y = derivative, x = tq)) +
+  geom_line(aes(colour = order), show.legend = FALSE) +
+  labs(title = "First derivatives") +
+  theme_classic()
+
+gg_splines / gg_derivatives
 ```
