--- a/man/README.Rmd
+++ b/man/README.Rmd
@@ -1,5 +1,7 @@
 ---
-output: github_document
+output: 
+  github_document:
+    dev: ragg_png
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -95,15 +97,22 @@ splines_values <- purrr::map2(
 
 # Plot the splines
 gg_splines <- ggplot(splines_values, aes(y = value, x = tq)) +
-  geom_line(aes(colour = order), show.legend = FALSE) +
+  geom_line(aes(colour = order), size = 1.2, show.legend = FALSE) +
   labs(title = "b-splines") +
+  xlab("Points") +
+  ylab("Value") +
   theme_classic() 
 
 # Plot the first derivatives
 gg_derivatives <- ggplot(splines_values, aes(y = derivative, x = tq)) +
-  geom_line(aes(colour = order), show.legend = FALSE) +
+  geom_line(aes(colour = order), size = 1.2, show.legend = FALSE) +
   labs(title = "First derivatives") +
+  xlab("Points") +
+  ylab("Value") +
   theme_classic()
+```
 
+```{r plot-bspline, fig.height=5, fig.fullwidth = TRUE}
 gg_splines / gg_derivatives
 ```
+
