Improve image in README file

--- a/man/README.Rmd
+++ b/man/README.Rmd
@@ -97,7 +97,7 @@ splines_values <- purrr::map2(
 
 # Plot the splines
 gg_splines <- ggplot(splines_values, aes(y = value, x = tq)) +
-  geom_line(aes(colour = order), size = 1.2, show.legend = FALSE) +
+  geom_line(aes(colour = order), show.legend = FALSE) +
   labs(title = "b-splines") +
   xlab("Points") +
   ylab("Value") +
@@ -105,14 +105,14 @@ gg_splines <- ggplot(splines_values, aes(y = value, x = tq)) +
 
 # Plot the first derivatives
 gg_derivatives <- ggplot(splines_values, aes(y = derivative, x = tq)) +
-  geom_line(aes(colour = order), size = 1.2, show.legend = FALSE) +
+  geom_line(aes(colour = order), show.legend = FALSE) +
   labs(title = "First derivatives") +
   xlab("Points") +
   ylab("Value") +
   theme_classic()
 ```
 
-```{r plot-bspline, fig.height=5, fig.fullwidth = TRUE}
+```{r plot-bspline, fig.height=8, fig.fullwidth = TRUE, dpi = 300}
 gg_splines / gg_derivatives
 ```
 
